Moved index to root or rep. and corrected patsh of other files accordingly.

--- a/html/Contacts.html
+++ b/html/Contacts.html
@@ -10,13 +10,13 @@
 
 <body class="all">
     <header class="header-flex">
-<!--         <h1>Natan <br>Bravi </h1>
- -->        <h1>&lt; Na7aIV &gt;</h1>
+        <!-- <h1>Natan <br>Bravi </h1>  -->
+        <h1>&lt; Na7aIV &gt;</h1>
     </header>
     <h2>Contacts</h2>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="About.html">About</a></li>
             <li><a href="Contacts.html">Contacts</a></li>
         </ul>
