--- a/html/Contacts.html
+++ b/html/Contacts.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <title>Na7aIV: Contacts</title>
 </head>
 
 <body class="all">
