--- a/html/About.html
+++ b/html/About.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Na7aIV: About</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>Na7aIV: Blog</title>
 </head>
 
-<body class="all">
+<body>
+    <div class="page-content">
     <header class="header-flex">
-        <!-- <h1>Natan <br>Bravi </h1>  -->
         <h1>&lt; Na7aIV &gt;</h1>
     </header>
-    <h2>About</h2>
+    <h2>Blog</h2>
     <nav>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="About.html">About</a></li>
+            <li><a href="About.html">Blog</a></li>
             <li><a href="Contacts.html">Contacts</a></li>
         </ul>
     </nav>
@@ -28,12 +28,12 @@
                 <p> - Today I worked on this folder. Next align the h2 position of the user.</p>
             </article>
             <article>
-                <h2>27/01/2025: My first blog post</h2>
+                <h2>27/01/2025: My second blog post</h2>
                 <p> - Today I worked on this folder. Next do finishing touches on style.css.</p>
             </article>
             <article>
-                <h2></h2>
-                <p></p>
+                <h2>09/02/2025: Posting this on GitHub pages.</h2>
+                <p> - 1.0 of the site published.</p>
             </article>
             <article>
                 <h2></h2>
@@ -76,6 +76,8 @@
     <footer>
         <p>&copy; 2025 Na7aIV</p>
     </footer>
+</div>
+<p class="hide">Wow you got a smol screen</p>
 </body>
 
 </html>
