--- a/html/Contacts.html
+++ b/html/Contacts.html
@@ -4,35 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Na7aIV: Contacts</title>
 </head>
 
-<body class="all">
-    <header class="header-flex">
-        <!-- <h1>Natan <br>Bravi </h1>  -->
-        <h1>&lt; Na7aIV &gt;</h1>
-    </header>
-    <h2>Contacts</h2>
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Contacts.html">Contacts</a></li>
-        </ul>
-    </nav>
-    <main>
-        <h1>Here you can find my contacts:</h1>
-        <section>
+<body>
+    <div class="page-content">
+        <header class="header-flex">
+            <h1>&lt; Na7aIV &gt;</h1>
+        </header>
+        <h2>Contacts</h2>
+        <nav>
             <ul>
-                <li><a href="https://github.com/Na7aIV">GitHub</a></li>
-                <li><a href="mailto:natan.bravi@ssseco.ch">E-mail</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="About.html">Blog</a></li>
+                <li><a href="Contacts.html">Contacts</a></li>
             </ul>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Na7aIV</p>
-    </footer>
+        </nav>
+        <main>
+            <h1>Here you can find my contacts:</h1>
+            <section>
+                <ul>
+                    <li><a href="https://github.com/Na7aIV">GitHub</a></li>
+                    <li><a href="mailto:natan.bravi@ssseco.ch">E-mail</a></li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <p>&copy; 2025 Na7aIV</p>
+        </footer>
+    </div>
+    <p class="hide">Wow you got a smol screen</p>
 </body>
 
 </html>
